<resources>
    <string name="facebook_app_id" translatable="false">317399495624020</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb317399495624020</string>

    <string name="app_name">121 Shoppe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="action_language">Language</string>

    <string name="menu_profile">Your Profile</string>
    <string name="menu_post">Your Post</string>
    <string name="menu_like">Your Like</string>
    <string name="menu_loan">Your Loan</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About Us</string>
    <string name="menu_privacy">Term of Privacy</string>

    <string name="item_1">Home</string>
    <string name="item_2">Notification</string>
    <string name="item_3">Camera</string>
    <string name="item_4">Message</string>
    <string name="item_5">Account</string>
    //FrameHome
    <string name="txt_buy">Buy</string>
    <string name="txt_sell">Sell</string>
    <string name="txt_rent">Rent</string>
    <string name="txt_pro_discont">Product Discount</string>
    <string name="txt_new_post">New Post</string>
    <string name="txt_more">More</string>
    <string name="title_activity_discount_more_data">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    //Sring hide
    <string name="hit_tax_type">Tax Type</string>
    <string name="hit_brand">Brand</string>
    <string name="hit_year">Year</string>
    <string name="hit_condition">Condition</string>
    <string name="hit_price">Price</string>
    //Button
    <string name="btn_call">Call</string>
    <string name="btn_chat">SMS</string>
    <string name="btn_order">Order</string>
    <string name="btn_load">Loan</string>
    <string name="title_activity_user_post">User_post</string>

    //user account registration
    <string name="title_Login">Login account</string>
    <string name="title_registration">Register to post free ad</string>
    <string name="phone_number">Phone Number</string>
    <string name="email" translatable="false">Email</string>
    <string name="Password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="or">Or</string>
    <string name="register_by_facebook">Register by using your facebook account</string>

    //setting
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="language2">English</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="version">Version</string>
    <string name="logout">Logout</string>

    //Edit account
    <string name="txt_account_setting">Account Setting</string>
    <string name="hit_fistname">Fist Name</string>
    <string name="hit_lastname">Last Name</string>
    <string name="hit_store">Store/Company Name</string>
    <string name="hit_about_shop">About Shop/Company</string>
    <string name="hit_wingnumber">Wing Account / Number</string>
    <string name="hit_wingaccount">Wing Account / Name</string>
    <string name="hit_dealer">Dealer</string>

    //contact
    <string name="cm_contact">Contact</string>
    <string name="hit_name">Name</string>
    <string name="hit_phone1">Phone 1</string>
    <string name="hit_phone2">Phone 2</string>
    <string name="hit_phone3">Phone 3</string>
    <string name="hit_email">E-mail</string>
    <string name="hit_Address">Address</string>
    <string name="hit_upload_to_contact">Upload this contact to profile</string>
    <string name="hit_btnsubmit">Submit</string>

    //choose file in edit_account
    //type
    <string-array name="type">
        <item>Public</item>
        <item>121 Dealer</item>
        <item>Other Dealers</item>
    </string-array>

    //gender
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    //Place of Birth
    <string-array name="pob">
        <item>Phnom Penh </item>
        <item>Kandal Province </item>
        <item>Siem Reap Province </item>
        <item>Sihanoukville Province </item>
        <item>Banteay Meanchey Province </item>
        <item>Battambang Province </item>
        <item>Kampong Cham Province </item>
        <item>Kampong Chhnang Province </item>
        <item>Kampong Speu Province </item>
        <item>Kampong Thom Province </item>
        <item>Kampot Province </item>
        <item>Koh Kong Province </item>
        <item>Kep Province </item>
        <item>Kratié Province </item>
        <item>Mondulkiri Province </item>
        <item>Oddar Meanchey Province </item>
        <item>Pailin Province </item>
        <item>Preah Vihear Province </item>
        <item>Pursat Province </item>
        <item>Prey Veng Province </item>
        <item>Ratanakiri Province </item>
        <item>Stung Treng Province </item>
        <item>Svay Rieng Province </item>
        <item>Takéo Province </item>
        <item>Tbong Khmum Province </item>
    </string-array>

    // married
    <string-array name="married">
        <item>Single</item>
        <item>Married</item>
        <item>Separated</item>
        <item>Divorced</item>
        <item>Windowed</item>
    </string-array>

    // Choose fields in post (camera tap)
    //Post type
    <string-array name="post_type">
        <item>Buy</item>
        <item>Sell</item>
        <item>Rent</item>
    </string-array>
    //Category
    <string-array name="category">
        <item>Category</item>
        <item>Vehicles</item>
        <item>Electronics</item>
    </string-array>
    //Brand
    <string-array name="brand">
        <item>Brand</item>
        <item>Honda</item>
        <item>Suzuki</item>
    </string-array>
    //Type
    <string-array name="type_elec">
        <item>TV</item>
        <item>Air-Conditioner</item>
        <item>Refrigerator</item>
        <item>Washing machine</item>
    </string-array>
    //Brand motor
    <string-array name="motor_brand">

        <item>Honda</item>
        <item>Yamaha</item>
        <item>Suzuki</item>
        <item>Kawazaki</item>
        <item>BMW</item>
        <item>KR Motor</item>
        <item>GPX</item>
        <item>Keewey</item>
        <item>Ducati</item>
        <item>Benelli</item>
        <item>Other</item>
    </string-array>
    // Brand TV
    <string-array name="tv_brand">
        <item>Samsung </item>
        <item>Sony </item>
        <item>LG </item>
        <item>Sharp </item>
        <item>Philips </item>
        <item>Panasonic </item>
    </string-array>
    // Brand Air-conditioners
    <string-array name="air_conditioner_brand">
        <item>Samsung </item>
        <item>LG </item>
        <item>Sharp </item>
        <item>Panasonic </item>
    </string-array>

    //years
    <string-array name="years">
        <item>Year</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
    </string-array>
    //Condition
    <string-array name="condition">
        <item>New</item>
        <item>Used</item>
    </string-array>

    // Color
    <string-array name="color">
        <item>Black</item>
        <item>Red</item>
        <item>Gold</item>
        <item>Yellow</item>

    </string-array>

    //Rent type
    <string-array name="rent_type">
        <item>Week</item>
        <item>Month</item>
    </string-array>
    //Discount type
    <string-array name="discount_type">
        <item> Amount</item>
        <item> Percentage </item>
    </string-array>

    <!-- Start Loan Information String -->
    <string name="title_fill_information">Fill in Information</string>
    <string name="txt_clr_detail">DETAIL</string>
    <string name="hit_username">Username</string>
    <string name="hit_gender">Gender</string>
    <string name="hit_age">Age</string>
    <string name="hit_job">Job</string>
    <string name="hit_mon_income">Monthy Average Income</string>
    <string name="hit_mon_expense">Monthy Average Expense</string>
    <string name="hit_phone">Phone</string>
    <string name="txt_clr_information">LOAN INFORMATION</string>
    <string name="hit_loan_amount">Loan Amount</string>
    <string name="hit_loan_duration">Loan Duration (month)</string>
    <string name="hit_purpos">Loan Purpose</string>
    <string name="hit_status">Status</string>
    <string name="txt_clr_supporting">LOAN SUPPORTING DOCUMENT</string>
    <string name="hit_state_id">State ID</string>
    <string name="hit_family_book">Family Book</string>
    <string name="hit_staffid">Staff ID/ Salary Slip</string>
    <string name="hit_hourse">House Plant</string>
    <string name="loan_calculation">LOAN CALCULATION</string>
    <string name="loan_calculation_title">Loan Calculation</string>
    <string name="title_loan_price">Price ($)</string>
    <string name="title_loan_interest_rate">Interest Rate (%)</string>
    <string name="title_loan_deposit">Deposit ($)</string>
    <string name="title_loan_term">Term (Year)</string>
    <string name="title_monthly_payment">Monthly Payment</string>
    <!-- End Loan Information String -->

</resources>
