<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_home"
        android:checked="true"
        android:icon="@drawable/ic_home_selected"
        android:title="@string/item_1"/>
    <item
        android:id="@+id/tab_notification"
        android:icon="@drawable/ic_notifications_selected"
        android:title="@string/item_2"/>
    <item
        android:id="@+id/tab_camera"
        android:icon="@drawable/icon_camera"
        android:title="@string/item_3"/>
    <item
        android:id="@+id/tab_message"
        android:icon="@drawable/ic_messages_selected"
        android:title="@string/item_4"/>
    <item
        android:id="@+id/tab_account"
        android:icon="@drawable/icon_user"
        android:title="@string/item_5"/>
</menu>