<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Product_discount.Detail_pro_discount">
    <android.support.v4.widget.NestedScrollView
        android:layout_marginBottom="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ss.com.bannerslider.views.BannerSlider
            android:id="@+id/image"
            app:defaultIndicators="circle"
            android:layout_width="match_parent"
            android:layout_height="330dp">
        </ss.com.bannerslider.views.BannerSlider>
        <TextView
            android:paddingLeft="@dimen/dp_8"
            android:id="@+id/title"
            android:lines="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="@dimen/dp_8"
            android:id="@+id/location"
            android:text="Phnom Penh - 1h ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/dp_8"
                android:textColor="@android:color/holo_red_light"
                android:id="@+id/tv_cost"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="@dimen/dp_8"
                android:id="@+id/tv_price1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/tv_cost" />
            <TextView
                android:id="@+id/type_post"
                android:paddingRight="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_alignParentRight="true"
                android:textColor="#FF9800"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:id="@+id/view_line"
            android:layout_below="@+id/tv_price"
            android:layout_width="match_parent"
            android:background="@color/grey_light"
            android:layout_height="10dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/dp_16"
            android:id="@+id/description"
            android:text="DESCRIPTION"
            android:padding="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/description"
                android:id="@+id/line"
                style="@style/line"/>
            <TextView
                android:layout_marginStart="@dimen/dp_4"
                android:layout_below="@+id/line"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:text="Tax Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_brand"
                android:layout_below="@+id/line"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/tv_brand"
                android:id="@+id/line1"
                style="@style/line"/>
            <TextView
                android:layout_marginStart="@dimen/dp_4"
                android:layout_below="@+id/line1"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:text="Brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_year"
                android:layout_below="@+id/line1"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/tv_year"
                android:id="@+id/line2"
                style="@style/line"/>
            <TextView
                android:layout_marginStart="@dimen/dp_4"
                android:layout_below="@+id/line2"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:text="Year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_color"
                android:layout_below="@+id/line2"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/tv_color"
                android:id="@+id/line3"
                style="@style/line"/>
            <TextView
                android:layout_marginStart="@dimen/dp_4"
                android:layout_below="@+id/line3"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:text="Color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_condition"
                android:layout_below="@+id/line3"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/tv_condition"
                android:id="@+id/line4"
                style="@style/line"/>
            <TextView
                android:layout_marginStart="@dimen/dp_4"
                android:layout_below="@+id/line4"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:text="Condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_price"
                android:layout_below="@+id/line4"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/tv_price"
                android:id="@+id/line5"
                style="@style/line"/>
            <TextView
                android:layout_marginStart="@dimen/dp_4"
                android:layout_below="@+id/line5"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:text="Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_prices"
                android:layout_below="@+id/line5"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp_4"
                android:textSize="@dimen/dt_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/tv_prices"
                android:id="@+id/line6"
                style="@style/line"/>
            <TextView
                android:id="@+id/text"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_16"
                android:paddingLeft="@dimen/dp_8"
                android:textSize="@dimen/dp_16"
                android:layout_below="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:background="@color/grey_light"
                android:paddingTop="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8"
                android:text="CONTACT"
                android:gravity="center"
                android:textSize="@dimen/dp_16"
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/contact"
                style="@style/line"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_below="@+id/contact"
                android:id="@+id/cr_img"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorHome"
                android:layout_width="60dp"
                android:layout_height="60dp" />
            <TextView
                android:id="@+id/tv_name"
                android:layout_below="@+id/contact"
                android:textSize="@dimen/dp_24"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/cr_img" />
            <View
                android:id="@+id/line7"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_below="@+id/cr_img"
                android:background="@color/grey_light"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:layout_marginStart="@dimen/dp_8"
                android:drawableLeft="@drawable/icon_phone"
                android:id="@+id/tv_iconphone"
                android:layout_below="@+id/line7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingLeft="@dimen/dp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line7"
                android:id="@+id/tv_phone"
                android:layout_toEndOf="@+id/tv_iconphone" />
            <View
                android:layout_below="@+id/tv_iconphone"
                android:id="@+id/line8"
                android:background="@color/grey_light"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:layout_marginStart="@dimen/dp_8"
                android:id="@+id/tv_iconemail"
                android:layout_below="@+id/line8"
                android:drawableLeft="@drawable/icon_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_below="@+id/line8"
                android:id="@+id/tv_email"
                android:paddingLeft="@dimen/dp_4"
                android:layout_toEndOf="@+id/tv_iconemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_below="@+id/tv_iconemail"
                android:id="@+id/line9"
                android:background="@color/grey_light"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </RelativeLayout>
    </RelativeLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.constraint.ConstraintLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/shap_ratangle"
            android:text="@string/btn_call"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_chat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_chat"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/shap_ratangle"
            android:text="@string/btn_chat"
            app:layout_constraintBottom_toBottomOf="@+id/btn_call"
            app:layout_constraintEnd_toStartOf="@+id/btn_load"
            app:layout_constraintStart_toEndOf="@+id/btn_call"
            app:layout_constraintTop_toTopOf="@+id/btn_call"
            app:layout_constraintVertical_bias="0.0" />
        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/shap_ratangle1"
            android:text="@string/btn_order"
            app:layout_constraintBottom_toBottomOf="@+id/btn_chat"
            app:layout_constraintEnd_toStartOf="@+id/btn_loan"
            app:layout_constraintStart_toEndOf="@+id/btn_chat"
            app:layout_constraintTop_toTopOf="@+id/btn_chat" />

        <Button
            android:id="@+id/btn_loan"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/shap_ratangle1"
            android:text="@string/btn_load"
            app:layout_constraintBottom_toBottomOf="@+id/btn_load"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_load"
            app:layout_constraintTop_toTopOf="@+id/btn_load" />
    </android.support.constraint.ConstraintLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#72999999"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageButton
            android:id="@+id/btn_back"
            android:background="#00FFFFFF"
            android:src="@drawable/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="@dimen/dp_8"
            android:text="Back"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_title"
            android:text="Detail"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/dp_16"
            android:textStyle="normal" />
        <ImageButton
            android:layout_marginRight="@dimen/dp_8"
            android:id="@+id/btn_share"
            android:background="#00FFFFFF"
            android:src="@drawable/icon_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right" />
        <ImageButton
            android:background="#00FFFFFF"
            android:id="@+id/btn_like"
            android:src="@drawable/icon_heart1"
            android:layout_width="30dp"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_height="30dp"
            android:layout_gravity="right" />
    </android.support.v7.widget.Toolbar>
</RelativeLayout>